--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -392,7 +392,7 @@ treecontrol {
 }
 
 treecontrol > ul {
-  width: 310px;
+//  width: 310px;
   overflow: auto;
 }
 
@@ -523,9 +523,6 @@ background-color:#ffffff;
 #loadingCntnr div.loadingWord{width:200px;height:70px;line-height:70px;border:2px solid #D6E7F2;background:#fff;}
 #loadingCntnr img{margin:17px 15px;float:left;display:inline;}
 
-treecontrol ul{
-  width:305px !important;
-}
 
 /** Customization for Messenger **/
 /** The top lower **/
