--- a/docs/website/_includes/navside.html
+++ b/docs/website/_includes/navside.html
@@ -17,76 +17,96 @@
 -->
 
 <div class="col-md-3 col-lg-3 col-xs-4 aside1 visible-md visible-lg">
-	<ul class="nav nav-pills nav-stacked">
-	{% for category in site.categories %}     <!-- categories -->
-   {% if category[0]  == 'installation' %}
-		<li><a href="#{{ category | first }}" data-toggle="collapse" >Installation</a></li>
-		<div class="collapse in" id="{{ category[0] }}">
-			<div class="list-group">
-				<ul style="list-style-type:disc">
-			{% for post in category[1] %}
-				<li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
-			{% endfor %}
-				<ul>
-			</div>
-		</div>
-   {% endif %}
-	{% endfor %}
-	{% for category in site.categories %} 
-   {% if category[0]  == 'tutorial' %}
-		<li><a href="#{{ category | first }}" data-toggle="collapse" >Tutorial</a></li>
-		<div class="collapse in" id="{{ category[0] }}">
-			<div class="list-group">
-				<ul style="list-style-type:disc">
-			{% for post in category[1] %}
-				<li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
-			{% endfor %}
-				<ul>
-			</div>
-		</div>
-   {% endif %}
-	{% for category in site.categories %} 
-	{% endfor %}
-   {% if category[0]  == 'howto' %}
-		<li><a href="#{{ category | first }}" data-toggle="collapse" >How to</a></li>
-		<div class="collapse in" id="{{ category[0] }}">
-			<div class="list-group">
-				<ul style="list-style-type:disc">
-			{% for post in category[1] %}
-				<li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
-			{% endfor %}
-				<ul>
-			</div>
-		</div>
-   {% endif %}
-	{% endfor %}
-	{% for category in site.categories %} 
-   {% if category[0]  == 'api' %}
-		<li><a href="#{{ category | first }}" data-toggle="collapse" >API</a></li>
-		<div class="collapse in" id="{{ category[0] }}">
-			<div class="list-group">
-				<ul style="list-style-type:disc">
-			{% for post in category[1] %}
-				<li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
-			{% endfor %}
-				<ul>
-			</div>
-		</div>
-   {% endif %}
-	{% endfor %}
-	{% for category in site.categories %} 
-   {% if category[0]  == 'faq' %}
-		<li><a href="#{{ category | first }}" data-toggle="collapse" >FAQ</a></li>
-		<div class="collapse in" id="{{ category[0] }}">
-			<div class="list-group">
-				<ul style="list-style-type:disc">
-			{% for post in category[1] %}
-				<li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
-			{% endfor %}
-				<ul>
-			</div>
-		</div>
-   {% endif %}
-	{% endfor %}
-	</ul>
+    <ul class="nav nav-pills nav-stacked">
+        {% for category in site.categories %}     <!-- categories -->
+        {% if category[0] == 'gettingstarted' %}
+        <li><a href="#{{ category | first }}" data-toggle="collapse">Getting Started</a></li>
+        <div class="collapse in" id="{{ category[0] }}">
+            <div class="list-group">
+                <ul style="list-style-type:disc">
+                    {% for post in category[1] %}
+                    <li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
+                    {% endfor %}
+                    <ul>
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+
+        {% for category in site.categories %}
+        {% if category[0] == 'installation' %}
+        <li><a href="#{{ category | first }}" data-toggle="collapse">Installation</a></li>
+        <div class="collapse in" id="{{ category[0] }}">
+            <div class="list-group">
+                <ul style="list-style-type:disc">
+                    {% for post in category[1] %}
+                    <li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
+                    {% endfor %}
+                    <ul>
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+
+        {% for category in site.categories %}
+        {% if category[0] == 'tutorial' %}
+        <li><a href="#{{ category | first }}" data-toggle="collapse">Tutorial</a></li>
+        <div class="collapse in" id="{{ category[0] }}">
+            <div class="list-group">
+                <ul style="list-style-type:disc">
+                    {% for post in category[1] %}
+                    <li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
+                    {% endfor %}
+                    <ul>
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+
+        {% for category in site.categories %}
+        {% if category[0] == 'development' %}
+        <li><a href="#{{ category | first }}" data-toggle="collapse">Development</a></li>
+        <div class="collapse in" id="{{ category[0] }}">
+            <div class="list-group">
+                <ul style="list-style-type:disc">
+                    {% for post in category[1] %}
+                    <li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
+                    {% endfor %}
+                    <ul>
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+
+        {% for category in site.categories %}
+        {% if category[0] == 'howto' %}
+        <li><a href="#{{ category | first }}" data-toggle="collapse">How to</a></li>
+        <div class="collapse in" id="{{ category[0] }}">
+            <div class="list-group">
+                <ul style="list-style-type:disc">
+                    {% for post in category[1] %}
+                    <li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
+                    {% endfor %}
+                    <ul>
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+
+
+        {% for category in site.categories %}
+        {% if category[0] == 'api' %}
+        <li><a href="#{{ category | first }}" data-toggle="collapse">API</a></li>
+        <div class="collapse in" id="{{ category[0] }}">
+            <div class="list-group">
+                <ul style="list-style-type:disc">
+                    {% for post in category[1] %}
+                    <li><a href="{{ post.url }}" class="list-group-item-lay pjaxlink">{{post.title}}</a></li>
+                    {% endfor %}
+                    <ul>
+            </div>
+        </div>
+        {% endif %}
+        {% endfor %}
+    </ul>
 </div>
