--- a/website/_includes/footer.html
+++ b/website/_includes/footer.html
@@ -25,10 +25,10 @@
           Apache Kylin is an effort undergoing incubation at The Apache Software Foundation (ASF), sponsored by the Apache Incubator. Incubation is required of all newly accepted projects until a further review indicates that the infrastructure, communications, and decision making process have stabilized in a manner consistent with other successful ASF projects. While incubation status is not necessarily a reflection of the completeness or stability of the code, it does indicate that the project has yet to be fully endorsed by the ASF.
           </div>
         <a href="http://www.apache.org">
-            <img id="asf-logo" alt="Apache Software Foundation" src="assets/images/feather-small.gif">
+            <img id="asf-logo" alt="Apache Software Foundation" src="/assets/images/feather-small.gif">
         </a>
         <a href="http://incubator.apache.org/">
-            <img id="incubator-logo" alt="Apache Incubator" src="assets/images/egg-logo.png">
+            <img id="incubator-logo" alt="Apache Incubator" src="/assets/images/egg-logo.png">
         </a>
 
         <div id="copyright">
